# KuralNet

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Makefile  Proposed Model.md  README.md  dev-requirements.txt  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: pull_request_ci.yml
be/: predict_audio.py  server.py  setup.py
configs/: model_config.yaml  train_config.yaml
data/: constant.py  download_missing_ser_datasets.py  download_ser_datasets.py  meta_extractor.py
data/meta_csvs/: am_ased.csv  bn_bangla.csv  bn_subesco.csv  de_emodb.csv  en_ravdess.csv  es_mesd.csv  hi_hindi.csv  it_emovo.csv  ta_emota.csv
data/meta_extractors/: amharic_ased.py  bangala_banspemo.py  bangla_subesco.py  chinese_casia.py  chinese_esd.py  dataset_processor.py  english_crema_d.py  english_iemocap.py  english_ravdess.py  french_cafe.py  german_emodb.py  hindi_hindi.py  italian_emovo.py  italian_emozionalmente.py  kannada_kannada.py  spanish_mesd.py  tamil_emota.py  telugu_telugu.py  urdu_urdu.py  urudu_urudu.py
data/processed/: en_iemocap.csv  fr_cafe.csv  kn_kannada.csv  language_code_dataset_name.csv  te_telugu.csv  ur_urdu.csv  zh_esd.csv
data/scripts/: amharic_ased.py  bangla_subesco.py  dataset_processor.py  english_ravdess.py  french_cafe.py  german_emodb.py  hindi_hindi.py  script_bangla.py  script_emota.py  script_esd.py  script_kannada.py  script_ravdess.py  script_subesco.py  script_telugu.py  spanish_mesd.py  tamil_emota.py  telugu_telugu.py  urudu_urudu.py
docs/: dataset_guidelines.md
kuralnet/dataset/: dataset.py  encoder.py  (+1 more)
meta/: download_datasets.py  meta_extractor.py
multilingual_speech_emotion_recognition/: dataset.py  model.py  trainer.py
problem_statement_claim/: Metadata (Paper, Model repos, tested results).xlsx
py/: data_preprocessing.py  dataset.py  predictor.py  trainer.py  utils.py
scripts/: download_datasets.py  pretrained_speech_encoder.py  run_training.py  train_hand_craft_model.py
tests/: conftest.py  en_iemocap.csv  test_data_preprocessing.py  test_dataset.py  test_feature.py  test_model.py  test_utils.py
ui/: Readme.md  index.html  script.js  style.css
utils/: constant.py  data_loader.py  dataset.py  encoder.py  utils.py
(+132 files in other folders)
