[tool.poetry]
name = "MultilingualSpeechEmotionRecognition"
version = "0.1.0"
description = "Multilingual Speech Emotion Recognition (SER) with ML"
authors = ["Luxshan Thavarasa <luxshan.20@cse.mrt.ac.lk>", "Jubeerathan Thevakumar <jubeerathan.20@cse.mrt.ac.lk>","Thanikan Sivatheepan <thanikan.20@cse.mrt.ac.lk>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^2.0.0"
requests = "^2.32.3"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.1.0"
notebook = "^7.2.1"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
