[project]
name = "multilingual-speech-emotion-recognition"
version = "0.1.0"
description = "Multilingual Speech Emotion Recognition model trained primarily focused on Indian languages, designed to detect emotions from speech, enhancing call centers, sentiment analysis, and accessibility tools."
authors = [
    {name = "Luxshan Thavarasa",email = "luxshanlux2000@gmail.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
